Fix Nav Bar Z-Index

--- a/public/less/themes/default/widgets.less
+++ b/public/less/themes/default/widgets.less
@@ -125,7 +125,7 @@
 	margin-left: -@nav-bar-width / 2;
 	left: 50%;
 	position: fixed;
-	z-index: 1;
+	z-index: 3; // higher than normal, lower than modal
 
 	& > .nav-bar-content {
 		.widget;
